[metadata]
name = rkd-harbor
author = RiotKit non-profit organization
author-email = riotkit@riseup.net
summary =
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://riotkit.org
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages_root = src
packages =
    harbor

[entry_points]
console_scripts =
    harbor = harbor:main
