[metadata]
name = rkd-harbor
author = RiotKit non-profit organization
author-email = riotkit@riseup.net
summary =
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://riotkit.org
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages_root = src
packages =
    rkd_harbor

[entry_points]
console_scripts =
    harbor = rkd_harbor:main
